fixed alignment and screen sizes

--- a/frontend/src/css/Feed.css
+++ b/frontend/src/css/Feed.css
@@ -14,6 +14,7 @@
 
 .name {
     margin: 0;
+    padding-left: 7px;
     float: left;
     color: lightgray;
 }
@@ -22,10 +23,13 @@
     clear: right;
     display: flex;
     justify-content: left;
+    padding-left: 7px;
+    margin: 0;
 }
 
 p {
     clear: both;
     color: gray;
+    margin: 16px 24px;
     text-align: left;
 }
