--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -1,7 +1,15 @@
+li {
+    
+    
+    padding: 20px;
+}
+
+@media only screen and (min-width: 1214px) {
 .navbar {
     float: left;
     position: fixed;
-    width: 200px;
+    width: 12%;
+    margin-left: 2%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,10 +33,48 @@ li {
 }
 
 .navbarLogo {
-    width: 80px;
+    width: 40px;
     image-orientation: flip;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+}
+
+@media only screen and (max-width: 1213px) {
+    .navbar {
+        padding-left: 17%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: start;
+    }
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    li {
+        padding: 0 16px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .navbarLogo {
+        width: 40px;
+        image-orientation: flip;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
 }
